Trying to fix spacing issue with image on index page.

--- a/style/style.css
+++ b/style/style.css
@@ -25,7 +25,7 @@
 
 @media (max-width: 600px) {
     .mobile {
-        margin-top: 20px;
+        margin-top: 50px;
         margin-left: auto;
         margin-right: auto;
         /* position: absolute; */
